--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,8 @@
  jar {
    manifest {
      // attributes 'Main-Class': 'connectx.CXGame'
-     attributes 'Main-Class': 'connectx.CXPlayerTester'
+     // attributes 'Main-Class': 'connectx.CXPlayerTester'
      // attributes 'Main-Class': 'connectx.CXBitTest'
+     attributes 'Main-Class': 'connectx.CXEvaluateTest'
    }
  }
