--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,9 @@
 
  jar {
    manifest {
-     // attributes 'Main-Class': 'connectx.CXGame'
+     attributes 'Main-Class': 'connectx.CXGame'
      // attributes 'Main-Class': 'connectx.CXPlayerTester'
      // attributes 'Main-Class': 'connectx.CXBitTest'
-     attributes 'Main-Class': 'connectx.CXEvaluateTest'
+     // attributes 'Main-Class': 'connectx.CXEvaluateTest'
    }
  }
